# AigentQube

./: .env.example  .gitignore  AIGENTQUBE_INTERFACE_GUIDE.md  AIGENTQUBE_INTERFACE_GUIDE_BASE_55408.md  AIGENTQUBE_INTERFACE_GUIDE_LOCAL_55408.md  AIGENTQUBE_INTERFACE_GUIDE_REMOTE_55408.md  AIGENTQUBE_ONBOARDING.md  AIGENTQUBE_OPERATORS_MANUAL.md  ARCHITECTURE.md  BUILD_MANUAL.md  CAPSTONE_RUN_FRONTEND..md  CHANGELOG.md  DEVELOPER.md  Dockerfile.backend  Dockerfile.frontend  FRONTEND_BUILD_MANUAL.md  IMPLEMENTATION_ROADMAP.md  IQUBE_INTERFACE_DESIGN.md  MVA_BUILD_PLAN.md  NEXT_STEPS_PROTOTYPE_DEVELOPMENT.md  PROTOTYPE_SPRINT_PLAN.md  README.md  amplify.yml  docker-compose.yml  nginx.conf  package-lock.json  pyproject.toml  requirements.txt
.github/workflows/: ci_cd.yml  deploy.yml  deployToProd.yml  deployToStaging.yml
docs/: API_INTEGRATION_GUIDE.md
src/backend/: blockchain.py  blockchain_monitor.py  context_transformer.py  main.py  natural_language_interface.py
src/frontend/aigentqube-dashboard/: METIS_API_INTEGRATION_NOTES.md  config-overrides.js  craco.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  webpack.config.js
src/frontend/aigentqube-dashboard/docs/: METIS_API_INTEGRATION_NOTES.md
src/frontend/aigentqube-dashboard/public/: index.html  model.onnx.json
src/frontend/aigentqube-dashboard/src/: App.test.tsx  app.tsx  index.css  index.tsx  react-app-env.d.ts  setupProxy.js  setupTests.ts
src/services/: BlockchainService.ts  iQubeService.ts
src/types/: iQube.ts
tests/backend/: test_blockchain_monitor.py
(+66 files in other folders)
